--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbar">
           <div class="navbar-nav flex-grow-1">
-            <a class="nav-link p-2 text-light" href="{{ site.baseurl }}/Das_Rollenspiel/">Das Rollenspiel</a>
+            <a class="nav-link p-2 text-light" href="{{ site.baseurl }}/Das_Rollenspiel">Das Rollenspiel</a>
             <a class="nav-link p-2 text-light" href="{{ site.baseurl }}/Downloads/">Downloads</a>
             <a class="nav-link p-2 text-light" href="{{ site.baseurl }}/Produkte/">Produkte</a>
             <a class="nav-link p-2 text-light" href="{{ site.baseurl }}/Tools/">Tools</a>
@@ -27,7 +27,7 @@
         </div>
       </nav>
     </header>
-    <header class="navbar navbar-expand-md bg-light py-2 mb-2">
+    <header class="navbar navbar-expand-md bg-light py-2 mb-2 bg-yellow">
       <nav class="breadcrumb container-xxl flex-wrap px-3 mb-0 justify-content-start">
         {% include breadcrumbs.md %}
       </nav>
