--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,6 +18,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbar">
           <div class="navbar-nav flex-grow-1">
+            <a class="nav-link p-2 text-light" href="{{ site.baseurl }}/Aktuelles/">Aktuelles</a>
             <a class="nav-link p-2 text-light" href="{{ site.baseurl }}/Spielregeln/">Spielregeln</a>
             <a class="nav-link p-2 text-light" href="{{ site.baseurl }}/Weltraum/">Weltraum</a>
             <a class="nav-link p-2 text-light" href="{{ site.baseurl }}/Abenteuer/">Abenteuer</a>
