--- a/_layouts/planet.html
+++ b/_layouts/planet.html
@@ -7,7 +7,8 @@ layout: default
     {{ content }}
   </main>
   <aside class="col col-xl-4 pe-0">
-    {% assign data = page.sitedata.Planeten[site.title] %}
+    {% assign name = page.name | remove: ".md" %}
+    {% assign data = page.sitedata.Planeten[name] %}
     {% include planet.md data=data %}
   </aside>
 </div>
