--- a/_layouts/aside.html
+++ b/_layouts/aside.html
@@ -3,11 +3,15 @@ layout: default
 ---
 
 <div class="row row-cols-1 row-cols-xl-2 gx-5 gy-3 me-0">
-  <main class="col col-xl-8">
-    {{ content }}
-  </main>
-  <aside class="col col-xl-4 pe-0">
-    {% assign aside = page.name | replace: ".md", "_aside.md" %}
-    {% include_relative {{ aside }} %}
-  </aside>
+	<main class="col col-xl-8">
+		{{ content }}
+	</main>
+	<aside class="col col-xl-4 pe-0">
+		{% if site.aside_body %}
+			{{ site.aside_body | markdownify }}
+		{% else %}
+			{% assign aside = page.name | replace: ".md", "_aside.md" %}
+			{% include_relative {{ aside }} %}
+		{% endif %}
+	</aside>
 </div>
