--- a/_layouts/aside.html
+++ b/_layouts/aside.html
@@ -7,8 +7,8 @@ layout: default
 		{{ content }}
 	</main>
 	<aside class="col col-xl-4 pe-0">
-		{% if site.aside_body %}
-			{{ site.aside_body | markdownify }}
+		{% if aside_body %}
+			{{ aside_body | markdownify }}
 		{% else %}
 			{% assign aside = page.name | replace: ".md", "_aside.md" %}
 			{% include_relative {{ aside }} %}
