--- a/_layouts/aside.html
+++ b/_layouts/aside.html
@@ -7,7 +7,11 @@ layout: default
 		{{ content }}
 	</main>
 	<aside class="col col-xl-4 pe-0">
-		{% assign aside = page.name | replace: ".md", "_aside.md" %}
-		{% include_relative {{ aside }} %}
+		{% if page.aside %}
+			{% include_relative {{ page.aside }} %}
+		{% else %}
+			{% assign aside = page.name | replace: ".md", "_aside.md" %}
+			{% include_relative {{ aside }} %}
+		{% endif %}
 	</aside>
 </div>
