--- a/_layouts/weltraumphaenomen.html
+++ b/_layouts/weltraumphaenomen.html
@@ -9,6 +9,6 @@ layout: default
   <aside class="col col-xl-4 pe-0">
     {% assign name = page.title | replace: " ", "_" %}
     {% assign data = page.sitedata.Weltraumphaenomene[name] %}
-    {% include weltraumphaenomene.md data=data %}
+    {% include weltraumphaenomen.md data=data %}
   </aside>
 </div>
