--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,8 +37,8 @@
         </nav>
         <div class="btn-group dropstart">
           <button id="btnSearch" data-bs-toggle="dropdown" class="btn btn-sm btn-yellow border-0 mi">search</button>
-          <div class="dropdown-menu">
-            <input type="text" class="form-control"/>
+          <div class="dropdown-menu p-2 bg-yellow">
+            <input type="text" class="form-control" placeholder="Suche" id="inputSearch"/>
             <div class="dropdown-divider"></div>
             <div class="list-group" id="searchResult"></div>
           </div>
