--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,7 +38,7 @@
         <div class="btn-group dropstart">
           <button id="btnSearch" data-bs-toggle="dropdown" class="btn btn-sm btn-yellow border-0 mi">search</button>
           <div class="dropdown-menu p-2 bg-yellow">
-            <input type="text" class="form-control" placeholder="Suche" id="inputSearch"/>
+            <input type="text" class="form-control mb-2" placeholder="Suche" id="inputSearch"/>
             <div class="list-group" id="searchResult"></div>
           </div>
         </div>
