--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,7 +37,7 @@
         </nav>
         <div class="btn-group dropstart">
           <button id="btnSearch" data-bs-toggle="dropdown" class="btn btn-sm btn-yellow border-0 mi">search</button>
-          <div class="dropdown-menu p-2 bg-yellow">
+          <div class="dropdown-menu p-2 bg-yellow" id="dropdownSearch">
             <input type="text" class="form-control mb-2" placeholder="Suche" id="inputSearch"/>
             <div class="list-group" id="searchResult"></div>
           </div>
