--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,8 +23,7 @@
             <a class="nav-link p-2 text-light" href="{{ site.baseurl }}/Spielregeln/">Spielregeln</a>
             <a class="nav-link p-2 text-light" href="{{ site.baseurl }}/Weltraum/">Weltraum</a>
             <a class="nav-link p-2 text-light" href="{{ site.baseurl }}/Abenteuer/">Abenteuer</a>
-            <a class="nav-link p-2 text-light" href="{{ site.baseurl }}/Downloads/">Downloads</a>
-            <a class="nav-link p-2 text-light" href="{{ site.baseurl }}/Produkte/">Produkte</a>
+            <a class="nav-link p-2 text-light" href="{{ site.baseurl }}/Publikationen/">Publikationen</a>
             <a class="nav-link p-2 text-light" href="{{ site.baseurl }}/Kontakt">Kontakt</a>
           </div>
         </div>
