--- a/_layouts/raumstation.html
+++ b/_layouts/raumstation.html
@@ -9,6 +9,6 @@ layout: default
   <aside class="col col-xl-4 pe-0">
     {% assign name = page.title | replace: " ", "_" %}
     {% assign data = page.sitedata.Raumstationen[name] %}
-    {% include sternensystem.md data=data %}
+    {% include raumstation.md data=data %}
   </aside>
 </div>
