--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -169,3 +169,16 @@ button:focus {
 .border-black {
   border-color: black !important;
 }
+
+a#totop {
+  display:block;
+  width: 19px;
+  height: 12px;
+  background-image: url(/assets/images/totop.png);
+  text-decoration: none;
+  opacity: 0.2;
+}
+
+a#totop:hover {
+  opacity: 0.6;
+}
