--- a/_layouts/konzern.html
+++ b/_layouts/konzern.html
@@ -2,13 +2,14 @@
 layout: default
 ---
 
+{% assign name = page.title | replace: " ", "_" | replace: ".", "_" %}
+{% assign data = page.sitedata.Konzerne[name] %}
+
 <div class="row row-cols-1 row-cols-xl-2 gx-5 gy-3 me-0">
   <main class="col col-xl-8">
     {{ content }}
   </main>
-  <aside class="col col-xl-4 pe-0">
-    {% assign name = page.title | replace: " ", "_" %}
-    {% assign data = page.sitedata.Konzerne[name] %}
+  <aside class="col col-xl-4 pe-0" data-name="{{ name }}">
     {% include konzern.md data=data %}
   </aside>
 </div>
