--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,7 +46,7 @@
     <div class="container-xxl py-2 flex-grow-1">
         {{ content }}
     </div>
-    <footer class="footer-bottom bg-light">
+    <footer class="footer-bottom bg-light" id="footer">
       <nav class="container-xxl d-flex align-items-center justify-content-between">
         <div></div>
         <div>
