--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -187,6 +187,6 @@ a#totop:hover {
   opacity: 0.6;
 }
 
-#kartenpanel text {
-  cursor: pointer;
+#searchResult > a {
+  background-color: #fc0;
 }
