--- a/_layouts/konzern.html
+++ b/_layouts/konzern.html
@@ -2,7 +2,15 @@
 layout: default
 ---
 
-{% assign name = page.title | replace: " ", "_" | replace: ".", "_" %}
+{% assign name = page.title | replace: " ", "_" %}
+{% assign name = name | replace: ".", "_" %}
+{% assign name = name | replace: "ß", "ss" %}
+{% assign name = name | replace: "ä", "ae" %}
+{% assign name = name | replace: "ö", "oe" %}
+{% assign name = name | replace: "ü", "ae" %}
+{% assign name = name | replace: "Ä", "ae" %}
+{% assign name = name | replace: "Ö", "ae" %}
+{% assign name = name | replace: "Ü", "ae" %}
 {% assign data = page.sitedata.Konzerne[name] %}
 
 <div class="row row-cols-1 row-cols-xl-2 gx-5 gy-3 me-0">
