--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,9 +34,9 @@
         <nav class="breadcrumb flex-wrap mb-0 justify-content-start">
           {% include breadcrumbs.md %}
         </nav>
-        <div class="btn-group dropstart">
+        <div class="btn-group dropdown">
           <button id="btnSearch" data-bs-toggle="dropdown" class="btn btn-sm btn-yellow border-0 mi">search</button>
-          <div class="dropdown-menu p-2 bg-yellow" id="dropdownSearch">
+          <div class="dropdown-menu dropdown-menu-end p-2 bg-yellow" id="dropdownSearch">
             <input type="text" class="form-control mb-2" placeholder="Suche" id="inputSearch"/>
             <div class="list-group" id="searchResult"></div>
           </div>
