--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -148,6 +148,8 @@ button:focus {
 
 #dropdownSearch {
   min-width: 20rem;
+  margin-right: 2rem !important;
+  margin-top: -1.5rem !important;
 }
 
 .dice {
