--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,7 +30,7 @@
       </nav>
     </header>
     <header class="navbar navbar-expand-md py-2 mb-2 bg-yellow">
-      <div class="container-xxl">
+      <div class="container-xxl flex-nowrap">
         <nav class="breadcrumb flex-wrap mb-0 justify-content-start">
           {% include breadcrumbs.md %}
         </nav>
