--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -145,6 +145,12 @@ main ul {
   background-size: cover;
 }
 
+.bg-ideenhalde {
+  background-image: url("/assets/images/bg-ideenhalde.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
 .mt-6 {
   margin-top: 6rem !important;
 }
