--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -144,19 +144,25 @@ main ul {
 }
 
 .bg-sternenkarte {
-  background-image: url("/assets/images/sternenkarte-quadrat.png");
+  background-image: url("{{ site.baseurl }}/assets/images/sternenkarte-quadrat.png");
   background-repeat: no-repeat;
   background-size: cover;
 }
 
 .bg-startunes {
-  background-image: url("/assets/images/bg-startunes.png");
+  background-image: url("{{ site.baseurl }}/assets/images/bg-startunes.png");
   background-repeat: no-repeat;
   background-size: cover;
 }
 
 .bg-ideenhalde {
-  background-image: url("/assets/images/bg-ideenhalde.png");
+  background-image: url("{{ site.baseurl }}/assets/images/bg-ideenhalde.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.bg-publikationen {
+  background-image: url("{{ site.baseurl }}/assets/images/startseite3.jpg");
   background-repeat: no-repeat;
   background-size: cover;
 }
