--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -143,26 +143,38 @@ main ul {
   font-feature-settings: 'liga';
 }
 
-.bg-sternenkarte {
+.bg-spielregeln {
+  background-image: url("{{ site.baseurl }}/assets/images/startseite0.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.bg-weltraum {
   background-image: url("{{ site.baseurl }}/assets/images/sternenkarte-quadrat.png");
   background-repeat: no-repeat;
   background-size: cover;
 }
 
-.bg-startunes {
-  background-image: url("{{ site.baseurl }}/assets/images/bg-startunes.png");
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
-.bg-ideenhalde {
-  background-image: url("{{ site.baseurl }}/assets/images/bg-ideenhalde.png");
+.bg-abenteuer {
+  background-image: url("{{ site.baseurl }}/assets/images/startseite1.jpg");
   background-repeat: no-repeat;
   background-size: cover;
 }
 
 .bg-publikationen {
   background-image: url("{{ site.baseurl }}/assets/images/startseite3.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.bg-zufallstabellen {
+  background-image: url("{{ site.baseurl }}/assets/images/bg-zufallstabellen.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.bg-ideenhalde {
+  background-image: url("{{ site.baseurl }}/assets/images/bg-ideenhalde.png");
   background-repeat: no-repeat;
   background-size: cover;
 }
@@ -233,4 +245,9 @@ a#totop:hover {
 
 .tbl-collapsed table {
   display: none;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
 }
