--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,6 +4,10 @@ layout: page
 
 <h1>{{ page.title }}</h1>
 
+{% if page.image %}
+<img src="{{ site.baseurl }}{{ page.image }}" class="float-start me-4 mb-4" style="max-width: 10rem;"/>
+{% endif %}
+
 {{ content }}
 
 <hr/>
