Add close button

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,8 @@
     </div>
     <div data-bs-theme="dark" class="offcanvas offcanvas-end" tabindex="-1" id="search-menu">
       <div class="offcanvas-header">
-        <input type="text" class="form-control mb-2" placeholder="Suchen" id="inputSearch"/>
+        <input type="text" class="form-control" placeholder="Suchen" id="inputSearch"/>
+        <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas"></button>
       </div>
       <div class="offcanvas-body p-0">
         <div class="list-group list-group-flush" id="searchResult"></div>
