--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,6 +27,8 @@
         <hr class="dropdown-divider my-2"/>
         <a class="dropdown-item py-2 px-3" href="{{ site.baseurl }}/Zufallstabellen/"><span class="mi me-3">&#xF544;</span>Zufallstabellen</a>
         <a class="dropdown-item py-2 px-3" href="{{ site.baseurl }}/Ideenhalde/"><span class="mi me-3">&#xF675;</span>Ideenhalde</a>
+        <hr class="dropdown-divider my-2"/>
+        <a class="dropdown-item py-2 px-3" href=""><span class="mi me-3">&#xF3ED;</span>GitHub Repository</a>
       </div>
     </div>
     <div data-bs-theme="dark" class="offcanvas offcanvas-end" tabindex="-1" id="search-menu">
