Planeten um Infos zu SLC, Städte und Konzerne ergänzt #17

--- a/_layouts/konzern.html
+++ b/_layouts/konzern.html
@@ -3,7 +3,8 @@ layout: default
 ---
 
 {% assign name = page.title | replace: " ", "_" %}
-{% assign name = name | replace: ".", "_" %}
+{% assign name = name | remove: "." %}
+{% assign name = name | remove: '"' %}
 {% assign name = name | replace: "ß", "ss" %}
 {% assign name = name | replace: "ä", "ae" %}
 {% assign name = name | replace: "ö", "oe" %}
