--- a/_layouts/planet.html
+++ b/_layouts/planet.html
@@ -5,10 +5,11 @@ layout: default
 <div class="row row-cols-1 row-cols-xl-2 gx-5 gy-3 me-0">
   <main class="col col-xl-8">
     {{ content }}
+    {% include planetinfo.md data=page.title %}
   </main>
   <aside class="col col-xl-4 pe-0">
     {% assign name = page.title | replace: " ", "_" %}
-    {% assign name = name | replace: ".", "_" %}
+    {% assign name = name | remove: "." %}
     {% assign name = name | replace: "ß", "ss" %}
     {% assign name = name | replace: "ä", "ae" %}
     {% assign name = name | replace: "ö", "oe" %}
