--- a/_layouts/sternensystem.html
+++ b/_layouts/sternensystem.html
@@ -8,7 +8,7 @@ layout: default
   </main>
   <aside class="col col-xl-4 pe-0">
     {% assign name = page.title | replace: " ", "_" %}
-    {% assign name = name | replace: ".", "_" %}
+    {% assign name = name | remove: "." %}
     {% assign name = name | replace: "ß", "ss" %}
     {% assign name = name | replace: "ä", "ae" %}
     {% assign name = name | replace: "ö", "oe" %}
