Tabellen können nun sortiert werden

--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -255,3 +255,15 @@ figcaption {
 #inputSearch {
   color: #212529;
 }
+
+th[data-sort="asc"]::after {
+  content: "\F128";
+  float: right;
+  font-family: 'Bootstrap Icons';
+}
+
+th[data-sort="desc"]::after {
+  content: "\F148";
+  float: right;
+  font-family: 'Bootstrap Icons';
+}
