Fix: Linter Warnungen

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="de">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <title>{% if page.title %}{{ page.title }} – {% endif %}{{ site.title }} – {{ site.description }}</title>
-    <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/assets/css/bootstrap.min.css" />
-    <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/assets/css/default.css" />
-    <link rel="icon" href="{{ site.baseurl }}/assets/favicon.ico" type="image/x-icon">
-    <link rel="alternate" type="application/rss+xml"  href="{{ site.baseurl }}/feed.xml" title="{{ site.title }}">
+    <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/assets/css/bootstrap.min.css"/>
+    <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/assets/css/default.css"/>
+    <link rel="icon" href="{{ site.baseurl }}/assets/favicon.ico" type="image/x-icon"/>
+    <link rel="alternate" type="application/rss+xml"  href="{{ site.baseurl }}/feed.xml" title="{{ site.title }}"/>
   </head>
   <body>
     <div data-bs-theme="dark" class="offcanvas offcanvas-start" tabindex="-1" id="main-menu">
       <div class="offcanvas-header">
-        <img src="{{ site.baseurl }}/assets/images/logo.png" alt="SpacePirates" width="230">
+        <img src="{{ site.baseurl }}/assets/images/logo.png" alt="SpacePirates" width="230"/>
         <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas"></button>
       </div>
       <div class="offcanvas-body p-0">
@@ -43,7 +43,7 @@
     <header class="navbar navbar-expand-sm navbar-dark bg-sterne">
       <nav class="container-xxl flex-column flex-wrap flex-md-nowrap pt-3">
         <a class="navbar-brand p-0 mb-4" href="{{ site.baseurl }}/">
-          <img src="{{ site.baseurl }}/assets/images/logo.png" alt="SpacePirates" width="398" height="93">
+          <img src="{{ site.baseurl }}/assets/images/logo.png" alt="SpacePirates" width="398" height="93"/>
         </a>
       </nav>
     </header>
