--- a/_layouts/sternenkarte.html
+++ b/_layouts/sternenkarte.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="de">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <title>{% if page.title %}{{ page.title }} – {% endif %}{{ site.title }} – {{ site.description }}</title>
-    <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/assets/css/bootstrap.min.css" />
-    <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/assets/css/default.css" />
-    <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/Weltraum/Sternenkarte/karte.css" />
-    <link rel="icon" href="{{ site.baseurl }}/assets/favicon.ico" type="image/x-icon">
-    <link rel="alternate" type="application/rss+xml"  href="{{ site.baseurl }}/feed.xml" title="{{ site.title }}">
+    <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/assets/css/bootstrap.min.css"/>
+    <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/assets/css/default.css"/>
+    <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/Weltraum/Sternenkarte/karte.css"/>
+    <link rel="icon" href="{{ site.baseurl }}/assets/favicon.ico" type="image/x-icon"/>
+    <link rel="alternate" type="application/rss+xml"  href="{{ site.baseurl }}/feed.xml" title="{{ site.title }}"/>
   </head>
   <body class="p-1 bg-yellow">
     <main class="container-fluid p-0">
