--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,9 +45,7 @@
         <h5>Sitemap</h5>
         <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas"></button>
       </div>
-      <div class="offcanvas-body p-0">
-        {% include sitemap.html %}
-      </div>
+      <div class="offcanvas-body p-0" id ="sitemap-body"></div>
     </div>
     <header class="navbar navbar-expand-sm navbar-dark bg-sterne">
       <nav class="container-xxl flex-column flex-wrap flex-md-nowrap pt-3">
